# rust-wallet-live

./: Cargo.toml  README.md  compose.yml
Docs/: 1-primeiros_passos_com_exum.md  2-persistencia_com_sqlx_e_postgresql.md  3-modelagem_de_usuario_e_autenticacao.md  4-implementando_cookies_e_jwt_em_rust.md  5-dashboards_e_templates_com_askama.md  6-adicoes_ao_projeto.md  README.md
migrations/: 20260707145136_create.assets.up.sql  20260709170000_numeric_decimal.down.sql  20260709170000_numeric_decimal.up.sql  20260709200000_update_users_email_name.down.sql  20260709200000_update_users_email_name.up.sql
src/: app.rs  error.rs  main.rs  models.rs  repository.rs
src/auth/: admin.rs  user.rs
src/routes/: api.rs  frontend.rs
src/routes/fixtures/: bitcoin_asset.sql
src/routes/snapshots/: rust_wallet_live__routes__api__tests__create_assets.snap  rust_wallet_live__routes__api__tests__list_assets.snap  rust_wallet_live__routes__api__tests__update_assets.snap
templates/: assets.html  login.html  register.html
