[package]
name = "rust-wallet-live"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.16.0", features = ["derive"] }
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
password-auth = "1.0.0"
rust_decimal = { version = "1.42.1", features = ["serde", "serde-arbitrary-precision"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["arbitrary_precision"] }
regex = "1.11.0"
once_cell = "1.20.0"
sqlx = { version = "0.9.0", features = ["macros", "postgres", "runtime-tokio", "rust_decimal"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tower-sessions = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

[dev-dependencies]
insta = { version = "1.48.0", features = ["json"] }
